--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Install other dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install flake8 #pytest pandas scikit-learn fastapi httpx
+          pip install flake8 pytest pandas scikit-learn fastapi httpx
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
