--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Run server in background
         run: uvicorn main:app &
       - name: Test with pytest
+        shell: bash -el {0}
         run: |
           conda activate ml_model_to_cloud_env
           pytest -vv
