--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -36,7 +36,8 @@ jobs:
       - name: Run server in background
         run: uvicorn main:app &
       - name: Test with pytest
-        shell: bash -el {0}
+        shell: bash
         run: |
           conda activate ml_model_to_cloud_env
           pytest -vv
+        working-directory: scripts
