--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -33,5 +33,5 @@ jobs:
         run: uvicorn main:app &
       - name: Run the test with pytest
         run: |
+          conda activate ml_model_to_cloud_env
           pytest -vv
-        working-directory: ./starter
