--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -22,6 +22,7 @@ jobs:
           python-version: 3.10.11
           channels: conda-forge,defaults
           channel-priority: true
+          auto-activate-base: false
           activate-environment: ml_model_to_cloud_env
           environment-file: starter/environment.yml
       - name: Install flake dependency
@@ -36,5 +37,6 @@ jobs:
       - name: Run server in background
         run: uvicorn main:app &
       - name: Run the test with pytest
+        shell: bash
         run: |
           pytest -vv
