--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -37,8 +37,9 @@ jobs:
       - name: Run server in background
         shell: bash 
         run: |
-          conda list -e
+          conda init bash
           conda activate ml_model_to_cloud_env
+          conda list -e
           uvicorn main:app &
       - name: Run the test with pytest
         run: |
