--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -10,37 +10,32 @@ permissions:
   contents: read
 
 jobs:
-  build:
-  
-    runs-on: ubuntu-latest
+  build-linux:
+    runs-on: ubuntu-latest  
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Set up miniconda
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          python-version: 3.10.11
-          channels: conda-forge,defaults
-          channel-priority: true
-          auto-activate-base: true
-          activate-environment: ml_model_to_cloud_env
-          environment-file: starter/environment.yml
-      - name: Install flake dependency
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Run server in background
-        shell: bash 
-        run: |
-          conda info --envs
-          conda activate ml_model_to_cloud_env
-          conda list -e
-          uvicorn main:app &
-      - name: Run the test with pytest
-        run: |
-          pytest -vv
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.10'
+    - name: Add conda to system path
+      run: |
+        # $CONDA is an environment variable pointing to the root of the miniconda directory
+        echo $CONDA/bin >> $GITHUB_PATH
+    - name: Install dependencies
+      run: |
+        conda env update --file environment.yml --name ml_model_to_cloud_env
+    - name: Lint with flake8
+      run: |
+        conda install flake8
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Run server in background
+      run: uvicorn main:app &
+    - name: Test with pytest
+      run: |
+        conda install pytest
+        pytest -vv
