--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -38,5 +38,5 @@ jobs:
     - name: Test with pytest
       run: |
         conda install pytest
-        conda info --env
+        conda env list
         pytest -vv
