--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,10 +25,11 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --file starter/environment.yml --name ml_model_to_cloud_env
+        conda env create -f starter/environment.yml
+        source activate ml_model_to_cloud_env
     - name: Lint with flake8
       run: |
-        conda install flake8
+        conda install flake8=6.0.0
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
@@ -37,6 +38,5 @@ jobs:
       run: uvicorn main:app &
     - name: Test with pytest
       run: |
-        conda install pytest
         conda env list
         pytest -vv
