--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         conda env create -f starter/environment.yml
         source activate ml_model_to_cloud_env
+        conda deactivate
     - name: Lint with flake8
       run: |
         conda install flake8=6.0.0
@@ -39,5 +40,4 @@ jobs:
     - name: Test with pytest
       run: |
         conda env list
-        conda list
         pytest -vv
