--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,7 +25,7 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env create -f starter/environment.yml
+        conda env update --file starter/environment.yml
         source activate ml_model_to_cloud_env
         conda activate ml_model_to_cloud_env
     - name: Lint with flake8
