--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,9 +25,9 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --file starter/environment.yml
-        source activate ml_model_to_cloud_env
-        conda activate ml_model_to_cloud_env
+        conda env create -f starter/environment.yml
+        source activate
+        conda deactivate
     - name: Lint with flake8
       run: |
         conda install flake8=6.0.0
