--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -25,9 +25,7 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env create -f starter/environment.yml
-        source activate
-        conda deactivate
+        conda env update --file starter/environment.yml --name base
     - name: Lint with flake8
       run: |
         conda install flake8=6.0.0
