--- a/starter/.github/workflows/manual.yml
+++ b/starter/.github/workflows/manual.yml
@@ -25,7 +25,7 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --file starter/environment.yml --name base
+        conda env update --file environment.yml --name base
     - name: Lint with flake8
       run: |
         conda install flake8=6.0.0
@@ -37,6 +37,4 @@ jobs:
       run: uvicorn main:app &
     - name: Test with pytest
       run: |
-        conda env list
-        conda list
         pytest -vv
