--- a/requirements.txt
+++ b/requirements.txt
@@ -1,163 +1,15 @@
-aiofiles==22.1.0
-aiosqlite==0.19.0
-anyio==3.6.2
-argon2-cffi==21.3.0
-argon2-cffi-bindings==21.2.0
-asttokens==2.2.1
-attrs==23.1.0
-Babel==2.12.1
-backcall==0.2.0
-backports.functools-lru-cache==1.6.4
-bayesian-optimization==1.4.3
-beautifulsoup4==4.12.2
-bleach==6.0.0
-brotlipy==0.7.0
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-cloudpickle==2.2.1
-colorama==0.4.6
-comm==0.1.3
-contourpy==1.0.7
-cryptography==40.0.2
-cycler==0.11.0
-debugpy==1.6.7
-decorator==5.1.1
-defusedxml==0.7.1
-entrypoints==0.4
-exceptiongroup==1.1.1
-executing==1.2.0
-fastapi==0.95.1
-fastjsonschema==2.16.3
-flake8==6.0.0
-flit_core==3.8.0
-fonttools==4.39.4
-gunicorn==20.1.0
-h11==0.14.0
-h2==4.1.0
-hpack==4.0.0
-htmlmin==0.1.12
-httpcore==0.17.0
-httpx==0.24.0
-hyperframe==6.0.1
-idna==3.4
-ImageHash==4.3.1
-importlib-metadata==6.6.0
-importlib-resources==5.12.0
-iniconfig==2.0.0
-ipykernel==6.23.0
-ipython==8.13.2
-ipython-genutils==0.2.0
-ipywidgets==8.0.6
-jedi==0.18.2
-Jinja2==3.1.2
-joblib==1.2.0
-json5==0.9.5
-jsonschema==4.17.3
-jupyter_client==8.2.0
-jupyter_core==5.3.0
-jupyter-events==0.6.3
-jupyter_server==2.5.0
-jupyter_server_fileid==0.9.0
-jupyter_server_terminals==0.4.4
-jupyter_server_ydoc==0.8.0
-jupyter-ydoc==0.2.3
-jupyterlab==3.6.3
-jupyterlab-pygments==0.2.2
-jupyterlab_server==2.22.1
-jupyterlab-widgets==3.0.7
-kiwisolver==1.4.4
-llvmlite==0.39.1
-MarkupSafe==2.1.2
-matplotlib==3.6.3
-matplotlib-inline==0.1.6
-mccabe==0.7.0
-mistune==2.0.5
-multimethod==1.4
-munkres==1.1.4
-nbclassic==1.0.0
-nbclient==0.7.4
-nbconvert==7.4.0
-nbformat==5.8.0
-nest-asyncio==1.5.6
-networkx==3.1
-notebook==6.5.4
-notebook_shim==0.2.3
-numba==0.56.4
-numpy==1.23.5
-packaging==23.1
-pandas==1.5.3
-pandas-profiling==0.0.dev0
-pandocfilters==1.5.0
-parso==0.8.3
-patsy==0.5.3
-pexpect==4.8.0
-phik==0.12.3
-pickleshare==0.7.5
-Pillow==9.5.0
-pip==23.1.2
-pkgutil_resolve_name==1.3.10
-platformdirs==3.5.0
-pluggy==1.0.0
-prometheus-client==0.16.0
-prompt-toolkit==3.0.38
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==10.0.1
-pycodestyle==2.10.0
-pycparser==2.21
-pydantic==1.10.7
-pyflakes==3.0.1
-Pygments==2.15.1
-pyOpenSSL==23.1.1
-pyparsing==3.0.9
-pyrsistent==0.19.3
-PySocks==1.7.1
-pytest==7.3.1
-python-dateutil==2.8.2
-python-json-logger==2.0.7
-pytz==2023.3
-PyWavelets==1.4.1
-PyYAML==6.0
-pyzmq==25.0.2
-requests==2.28.2
-rfc3339-validator==0.1.4
-rfc3986-validator==0.1.1
-scikit-learn==1.2.2
-scipy==1.9.3
-seaborn==0.12.2
-Send2Trash==1.8.2
-setuptools==67.7.2
-shap==0.41.0
-six==1.16.0
-slicer==0.0.7
-sniffio==1.3.0
-soupsieve==2.3.2.post1
-stack-data==0.6.2
-starlette==0.26.1
-statsmodels==0.13.5
-tangled-up-in-unicode==0.2.0
-terminado==0.17.1
-threadpoolctl==3.1.0
-tinycss2==1.2.1
-tomli==2.0.1
-tornado==6.3
-tqdm==4.64.1
-traitlets==5.9.0
-typeguard==2.13.3
-typing_extensions==4.5.0
-unicodedata2==15.0.0
-urllib3==1.26.15
-uvicorn==0.22.0
-visions==0.7.5
-wcwidth==0.2.6
-webencodings==0.5.1
-websocket-client==1.5.1
-wheel==0.40.0
-widgetsnbextension==4.0.7
-xgboost==1.7.4
-y-py==0.5.9
-ypy-websocket==0.8.2
-zipp==3.15.0
+bayesian-optimization
+pandas
+fastapi
+flake8
+gunicorn
+httpx
+matplotlib
+numpy
+pytest
+scikit-learn
+scipy
+seaborn
+uvicorn
+xgboost
+
