--- a/.github/workflows/main_salary-predict-api.yml
+++ b/.github/workflows/main_salary-predict-api.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: '3.10'
-
+        
       - name: Create and start virtual environment
         run: |
           python -m venv venv
@@ -31,6 +31,17 @@ jobs:
         run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Lint with flake8
+        run: |
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Run server in background
+        run: uvicorn main:app &
+      - name: Test with pytest
+        run: |
+          pytest -vv
       
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
