--- a/.github/workflows/main_salary-predict-api.yml
+++ b/.github/workflows/main_salary-predict-api.yml
@@ -83,3 +83,6 @@ jobs:
           app-name: 'salary-predict-api'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BFDE999BB1A7421FB15EA5464ED27924 }}
+      
+      - name: Run the app 
+        run: uvicorn main:app --host=0.0.0.0 --port=${PORT:-5000}
