--- a/.github/workflows/main_salary-predict-api.yml
+++ b/.github/workflows/main_salary-predict-api.yml
@@ -7,7 +7,7 @@ name: Build and deploy Python app to Azure Web App - salary-predict-api
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
 
 jobs:
