--- a/.github/workflows/main_salary-prediction-fast.yml
+++ b/.github/workflows/main_salary-prediction-fast.yml
@@ -7,7 +7,7 @@ name: Build and deploy Python app to Azure Web App - salary-prediction-fast
 on:
   push:
     branches:
-      - main
+      - master
   workflow_dispatch:
 
 jobs:
