--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -1,6 +1,9 @@
+on:
+  push:
+    branches: [ "main" ]
+
 jobs:
-  example-3:
-    name: Ex3 Linux
+  name: Ex3 Linux
     runs-on: "ubuntu-latest"
     defaults:
       run:
