--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -7,17 +7,17 @@ on:
   workflow_dispatch:
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
 
-  runs-on: ubuntu-latest
-
-  steps:
-    - uses: actions/checkout@v2
-    - uses: conda-incubator/setup-miniconda@v2
-      with:
-        activate-environment: anaconda-client-env
-        environment-file: test_deploy.yml
-        python-version: 3.5
-        auto-activate-base: false
-    - run: |
-        conda info
-        conda list
+    steps:
+      - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: anaconda-client-env
+          environment-file: test_deploy.yml
+          python-version: 3.5
+          auto-activate-base: false
+      - run: |
+          conda info
+          conda list
