--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: anaconda-client-env
-          environment-file: test_deploy.yml
+          environment-file: environment.yml
           python-version: 3.5
           auto-activate-base: false
       - run: |
