--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -3,7 +3,7 @@ name: Ex3 Linux
 on:
   push:
     branches:
-      - master
+      - main
   workflow_dispatch:
 
 jobs:
@@ -14,10 +14,19 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: anaconda-client-env
+          activate-environment: ml_model_to_cloud_env
           environment-file: environment.yml
-          python-version: 3.5
+          python-version: 3.10
           auto-activate-base: false
-      - run: |
-          conda info
-          conda list
+      - name: Lint with flake8
+        run: |
+          conda install flake8=6.0.0
+          # stop the build if there are Python syntax errors or undefined names
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      - name: Run server in background
+        run: uvicorn main:app &
+      - name: Test with pytest
+        run: |
+          pytest -vv
