--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -14,9 +14,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
+          python-version: 3.10
+          channels: conda-forge
           activate-environment: ml_model_to_cloud_env
           environment-file: environment.yml
-          python-version: 3.10
           auto-activate-base: false
       - name: Lint with flake8
         run: |
