--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -14,8 +14,10 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          python-version: 3.10
+          mamba-version: "*"
           channels: conda-forge
+          python-version: 3.10
+          channel-priority: true
           activate-environment: ml_model_to_cloud_env
           environment-file: environment.yml
           auto-activate-base: false
