--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -20,9 +20,10 @@ jobs:
           environment-file: environment.yml
           activate-environment: ml_model_to_cloud_env
           python-version: 3.10.6
+          
       - name: Lint with flake8
         run: |
-          conda install flake8=6.0.0
+          conda info --envs
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
