--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -17,6 +17,7 @@ jobs:
           mamba-version: "*"
           channels: conda-forge
           channel-priority: true
+          auto-activate-base: false
           environment-file: environment.yml
           activate-environment: ml_model_to_cloud_env
           python-version: 3.10.6
