--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -17,9 +17,8 @@ jobs:
           mamba-version: "*"
           channels: conda-forge
           channel-priority: true
-          auto-activate-base: false
-          environment-file: environment.yml
-          activate-environment: ml_model_to_cloud_env
+          environment-file: conda-environment.yml
+          activate-environment: base
           python-version: 3.10.6
           
       - name: Lint with flake8
