--- a/.github/workflows/test_deploy.yml
+++ b/.github/workflows/test_deploy.yml
@@ -17,6 +17,7 @@ jobs:
           mamba-version: "*"
           channels: conda-forge
           channel-priority: true
+          auto-activate-base: true
           environment-file: conda-environment.yml
           activate-environment: base
           python-version: 3.10.6
